--- a/src/Selmi/JobBundle/Resources/config/routing.yml
+++ b/src/Selmi/JobBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+selmi_job_home:
+    resource: "@SelmiJobBundle/Resources/config/routing/job.yml"
+    prefix:   /job
+
 selmi_job_homepage:
     path:     /
     defaults: { _controller: SelmiJobBundle:Default:index }
