--- a/src/Selmi/JobBundle/Resources/config/routing.yml
+++ b/src/Selmi/JobBundle/Resources/config/routing.yml
@@ -1,7 +1,7 @@
-selmi_job_home:
+SelmiJobBundle:
     resource: "@SelmiJobBundle/Resources/config/routing/job.yml"
     prefix:   /job
 
 selmi_job_homepage:
     path:     /
-    defaults: { _controller: SelmiJobBundle:Default:index }
+    defaults: { _controller: SelmiJobBundle:Job:index }
